--- a/src/app/add-control/add-control.page.html
+++ b/src/app/add-control/add-control.page.html
@@ -8,25 +8,25 @@
 </ion-header>
 
 <ion-content>
-  <form  #form="ngForm" (ngSubmit)="addNew(form)">
+  <form  #form="ngForm" (ngSubmit)="addOrUpdate(form)">
     <ion-grid>
         <ion-row color="primary" justify-content-center>
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
             <div text-center>
-              <h3>Crea uno nuevo</h3>
+              <h3>{{titleTemplate}}</h3>
             </div>
             <div padding>
               <ion-item>
                 <ion-label color="primary" position="stacked">Título del control</ion-label>
-                <ion-input name="title" placeholder="Ingresa el título" ngModel required></ion-input>
+                <ion-input name="title" placeholder="Ingresa el título" [(ngModel)]="control.title" required></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label color="primary" position="stacked">Descripción del control</ion-label>
-                <ion-input name="content" placeholder="Ingresa la descripción" ngModel required></ion-input>
+                <ion-input name="content" placeholder="Ingresa la descripción" [(ngModel)]="control.content" required></ion-input>
               </ion-item>
             </div>
             <div padding>
-              <ion-button  size="default" type="submit" [disabled]="form.invalid" expand="block">Crear</ion-button>
+              <ion-button  size="default" type="submit" [disabled]="form.invalid" expand="block">{{buttonTemplate}}</ion-button>
             </div>
           </ion-col>
         </ion-row>
