--- a/src/app/add-movement/add-movement.page.html
+++ b/src/app/add-movement/add-movement.page.html
@@ -7,21 +7,22 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <form  #form="ngForm" (ngSubmit)="addNew(form)">
+  <form  #form="ngForm" (ngSubmit)="addOrUpdate(form)">
     <ion-grid>
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div text-center>
-            <h3>Agrega una nueva {{wordType}}</h3>
+            <h3 *ngIf="type === 'UPDATE'">{{titleTemplate}}</h3>
+            <h3 *ngIf="type !== 'UPDATE'">Agregar nueva {{wordType}}</h3>
           </div>
           <div padding>
             <ion-item>
               <ion-label color="primary" position="stacked">Descripción de la {{wordType}}</ion-label>
-              <ion-input type="text" name="description" placeholder="Ingresa una descripción" ngModel required></ion-input>
+              <ion-input type="text" name="description" placeholder="Ingresa una descripción" [(ngModel)]="movement.description" required></ion-input>
             </ion-item>
             <ion-item>
               <ion-label color="primary" position="stacked">Cantidad</ion-label>
-              <ion-input type="number" name="amount" placeholder="Ingresa la cantidad" ngModel required></ion-input>
+              <ion-input type="number" name="amount" placeholder="Ingresa la cantidad" [(ngModel)]="movement.amount" required></ion-input>
             </ion-item>
             <ion-item>
               <ion-label color="primary" position="stacked">Fecha</ion-label>
@@ -29,7 +30,7 @@
             </ion-item>
           </div>
           <div padding>
-            <ion-button  size="default" type="submit" [disabled]="form.invalid" expand="block">Crear</ion-button>
+            <ion-button  size="default" type="submit" [disabled]="form.invalid" expand="block">{{buttonTemplate}}</ion-button>
           </div>
         </ion-col>
       </ion-row>
