--- a/src/app/control/control.page.html
+++ b/src/app/control/control.page.html
@@ -43,16 +43,8 @@
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button>
+    <ion-fab-button (click)="addMovement('OUT')">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
-    <ion-fab-list side="top">
-      <ion-fab-button color="success" (click)="addMovement('IN')"><ion-icon name="add"></ion-icon></ion-fab-button>
-    </ion-fab-list>
-    <ion-fab-list side="start">
-      <ion-fab-button color="danger" (click)="addMovement('OUT')">
-        <ion-icon name="remove"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
   </ion-fab>
 </ion-content>
