Update configuration for build

--- a/src/app/control/control.page.html
+++ b/src/app/control/control.page.html
@@ -43,7 +43,7 @@
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="addMovement('OUT')">
+    <ion-fab-button (click)="addMovement('OUT}')">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
